fixed bug: navbar not workin gon mobile. text padding in the way

--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,10 @@ form {
 }
 
 .header-content p {
-    font-size: 1.5rem;
+    max-height: 50%;
+    font-size: 1rem;
     display: block;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 
 #landing {
